Deleted the sidebar and used the navbar instead

--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,8 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: "Cabin", sans-serif;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
