--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -1,1 +1,11 @@
+<nav class="navbar bg-body-color">
+  <div class="container-fluid d-flex justify-content-center">
+    <div class="d-flex justify-content-between align-items-center">
+        <img src="assets/images/logo.png" alt="logo" width="30" height="24" class="mx-2">
+        <span class="navbar-brand mb-0 h1 text-white">Country List</span>
+
+    </div>
+  </div>
+</nav>
+
 <p>navbar works!</p>
