Created static table with one row

--- a/src/app/Components/table/table.component.css
+++ b/src/app/Components/table/table.component.css
@@ -1,3 +1,14 @@
-.heading{
-    color: var(--clr-purple-light);
+.heading {
+  color: var(--clr-purple-light);
+}
+.btn-outline{
+    border: 1px solid var(--clr-orange);
+    transition: all 100ms ease-in-out;
+}
+.btn-outline:hover{
+    color: var(--clr-white);
+    background-color: var(--clr-orange);
+}
+.dataarea{
+    border-radius: 15px;
 }
