--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
   --clr-white: #fff;
   --clr-purple-light: #a01775;
   --clr-purple-dark: #881e66;
-  --clr-orage: #ed7d31;
+  --clr-orange: #ed7d31;
   --clr-black: #000;
 }
 /* Box sizing rules */
